# Ui-Path-UserInterface

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  PRODUCTION_RUNBOOK.md  README.md  index.html  tailwind.config.js  tsconfig.app.tsbuildinfo
Knowledge-Case/Solution/: Solution.uipx
Knowledge-Case/Solution 1/: Solution 1.uipx
Vision-Agent-Coded/Solution/: Solution.uipx
Vision-Agent-Coded/Solution/Agent/: .env.example  agent.json  agent.mermaid  entry-points.json  foreman_events.py  input.json  main.py  project.uiproj  pyproject.toml  test_local.py
VoiceAgent/Solutionvoice2nd/: Solutionvoice2nd.uipx
VoiceAgent/Solutionvoice2nd/Agent/: VOICE_AGENT.md  agent.mermaid  entry-points.json  main.py  pyproject.toml  voice_server.py
context-grounding/: README.md
crew/: FOREMAN_CREW.md  crew-registry.json
knowledge-Agent/Solution/Agent/: .env.example  ENTERPRISE_FLOW.md  KG_VALUE.md  KNOWLEDGE_GRAPH.md  df_schema.md  df_seed.py  entry-points.json  foreman_events.py  input.json  kg.py  kg_close.py  kg_inspect.py  kg_reset.py  kg_schema.cypher  kg_seed.py  kg_sync.py  kg_why_graph.py  main.py  pyproject.toml  worker_report.sample.json
knowledge-Agent/Solution/Agent/.agent/: SDK_REFERENCE.md
knowledge-Agent/Solution/Agent/__uipath/: state.db
knowledge-Agent/Solution_KG/: Solution.uipx
server/: view_backend.py
skills/: README.md  TAXONOMY.md
src/: App.tsx  config.ts  index.css  types.ts
src/app/: Dashboard.tsx
src/components/: ActivityLog.tsx  FleetGraph.tsx  Logo.tsx  LogoMarquee.tsx  ReplayControls.tsx  RiskMeter.tsx  SkillFileModal.tsx  ui.tsx  (+2 more)
(+62 files in other folders)
