[project]
name = "Agent"
version = "0.0.1"
description = "Agent"
authors = [{ name = "pranjal.dureja@pwc.com" }]
dependencies = [
    "uipath-langchain[bedrock,vertex]>=0.10.0, <0.11.0",
    "opencv-python-headless>=4.9",
    "langchain-openai>=0.2",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.74",
]
