[project]
name = "Agent"
version = "0.0.1"
description = "Agent"
authors = [{ name = "pranjal.dureja@pwc.com" }]
dependencies = [
    "uipath-langchain>=0.10.0, <0.11.0",
    "twilio>=9.0.0",
    "truststore>=0.9.0",
]
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "uipath-dev>=0.0.74",
]
